--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#3d5afe</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimaryDark">#0031ca</color>
     <color name="colorPrimaryLight">#8187ff</color>
+    <color name="buttonDeepOrange">#e64a19</color>
+    <color name="buttonSelect">#d84315</color>
     <color name="colorAccent">#FF4081</color>
     <color name="colorWhite">#FFFFFF</color>
+    <color name="backgroundGray">#f5f5f5</color>
 </resources>
