--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -7,31 +7,29 @@
     android:background="@color/thumbColor"
     tools:context=".LoginActivity">
 
+
     <LinearLayout
+        android:id="@+id/linearRegister"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginHorizontal="48dp"
         android:gravity="center"
         android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="125dp"
-            android:layout_height="125dp"
-            android:baselineAligned="false"
-            app:srcCompat="@drawable/app_logo" />
-
         <TextView
-            android:id="@+id/welcomeText"
+            android:id="@+id/createText"
             style="@style/login_text_view"
-            android:text="@string/welcomeText"
-            android:textSize="24sp" />
+            android:layout_width="wrap_content"
+            android:layout_marginBottom="15dp"
+            android:drawableStart="@mipmap/ic_launcher"
+            android:text="@string/createText"
+            android:textSize="30sp" />
 
-        <TextView
-            android:id="@+id/requiredText"
-            style="@style/login_text_view"
-            android:text="@string/requiredText"
-            android:textSize="14sp" />
+        <EditText
+            android:id="@+id/username"
+            style="@style/editText_style"
+            android:inputType="textPersonName"
+            android:hint="Name" />
 
         <EditText
             android:id="@+id/inputEmail"
@@ -46,16 +44,15 @@
             android:inputType="textPassword" />
 
         <Button
-            android:id="@+id/signIn"
+            android:id="@+id/signUp"
             style="@style/login_buttons"
-            android:text="@string/login" />
+            android:text="@string/signUp" />
 
         <TextView
-            android:id="@+id/newUser"
+            android:id="@+id/termsText"
             style="@style/login_text_view"
-            android:text="@string/newUser"
-            android:textSize="18sp"
-            android:layout_marginTop="20dp"/>
+            android:text="@string/termsText"
+            android:textSize="14sp" />
 
 
     </LinearLayout>
