--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,13 +6,50 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:windowTranslucentStatus">true</item>
+        <item name="android:fontFamily">@string/fontSerif</item>
         
         <item name="android:windowAnimationStyle">@style/EnterExit.Activity</item>
     </style>
 
+    <!-- Animatii pentru Intrare/Iesire din activitate-->
     <style name="EnterExit.Activity" parent="@android:style/Animation.Activity">
         <item name="android:windowEnterAnimation">@anim/right_slide_in</item>
         <item name="android:windowExitAnimation">@anim/right_slide_in</item>
     </style>
+
+    <!-- Stil pentru editText (input)-->
+    <style name="editText_style">
+        <item name="android:gravity">center</item>
+        <item name="android:background">@drawable/edit_text_background</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_margin">10dp</item>
+        <item name="android:ems">10</item>
+        <item name="android:textColor">#4c4c4c</item>
+        <item name="android:textCursorDrawable">@null</item>
+    </style>
+
+    <!-- Stil pentru butoanele din Login Activity si Register.-->
+    <style name="login_buttons">
+        <item name="android:background">@drawable/login_buttons</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">#FDFDFE</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:layout_margin">8dp</item>
+    </style>
+
+    <!-- Stil pentru text view de la Login/register -->
+    <style name="login_text_view">
+        <item name="android:textAlignment">center</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">#FDFDFE</item>
+        <item name="android:layout_marginBottom">3dp</item>
+    </style>
+
 
 </resources>
