--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,5 @@
     <color name="buttonSelect">#d84315</color>
     <color name="colorAccent">#FF4081</color>
     <color name="colorWhite">#FFFFFF</color>
-    <color name="backgroundGray">#f5f5f5</color>
+    <color name="backgroundGray">#bdbdbd</color>
 </resources>
