--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,7 +8,6 @@
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:windowTranslucentStatus">true</item>
         <item name="android:fontFamily">@string/fontSerif</item>
-        
         <item name="android:windowAnimationStyle">@style/EnterExit.Activity</item>
     </style>
 
@@ -49,6 +48,15 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">#FDFDFE</item>
         <item name="android:layout_marginBottom">3dp</item>
+    </style>
+
+    <style name="ToolbarTheme" parent="AppTheme">
+        <item name="android:textColorPrimary">@android:color/white</item>
+        <item name="android:textColorSecondary">@android:color/white</item>
+    </style>
+
+    <style name="NavigationViewTheme" parent="AppTheme">
+        <item name="textAppearanceListItem">@style/TextAppearance.AppCompat.Body2</item>
     </style>
 
 
