--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -47,6 +47,7 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">#FDFDFE</item>
+        <item name="android:layout_marginTop">8dp</item>
         <item name="android:layout_marginBottom">3dp</item>
     </style>
 
@@ -57,6 +58,10 @@
 
     <style name="NavigationViewTheme" parent="AppTheme">
         <item name="textAppearanceListItem">@style/TextAppearance.AppCompat.Body2</item>
+    </style>
+
+    <style name="loginEmailPass" parent="Widget.AppCompat.Button.Colored">
+
     </style>
 
 
