--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_one"
+    android:orientation="vertical"
     tools:context=".LoginActivity">
 
 
@@ -12,6 +13,7 @@
         android:id="@+id/linearRegister"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+
         android:layout_marginHorizontal="48dp"
         android:gravity="center"
         android:orientation="vertical">
@@ -42,19 +44,42 @@
             android:hint="Password"
             style="@style/editText_style"
             android:inputType="textPassword" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textColor="@color/colorWhite"
+                android:text="@string/backToLoggin"/>
 
-        <Button
-            android:id="@+id/signUp"
-            style="@style/login_buttons"
-            android:text="@string/signUp" />
+            <Button
+                android:layout_width="match_parent"
+                android:layout_weight="1"
+                android:id="@+id/signUp"
+                style="@style/login_buttons"
+                android:text="@string/signUp" />
+
+        </LinearLayout>
 
         <TextView
             android:id="@+id/termsText"
             style="@style/login_text_view"
             android:text="@string/termsText"
             android:textSize="14sp" />
+        <include layout="@layout/separator_layout"></include>
+    </LinearLayout>
 
+
+
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        >
 
     </LinearLayout>
 
-</RelativeLayout>
+</LinearLayout>
