--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="colorAccent">#FF4081</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="backgroundGray">#bdbdbd</color>
+    <color name="loginBtns">#FDFDFE</color>
 </resources>
