--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,7 +7,7 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:windowTranslucentStatus">true</item>
-        <item name="android:fontFamily">@string/fontSerif</item>
+        <item name="android:fontFamily">@font/robotoregular</item>
         <item name="android:windowAnimationStyle">@style/EnterExit.Activity</item>
     </style>
 
@@ -60,8 +60,14 @@
         <item name="textAppearanceListItem">@style/TextAppearance.AppCompat.Body2</item>
     </style>
 
-    <style name="loginEmailPass" parent="Widget.AppCompat.Button.Colored">
-
+    <style name="login_btns">
+        <item name="android:layout_width">match_parent</item>>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:elevation">5dp</item>
+        <item name="android:layout_marginLeft">60dp</item>
+        <item name="android:layout_marginRight">60dp</item>
+        <item name="android:textAlignment">textStart</item>
+        <item name="android:textAllCaps">false</item>
     </style>
 
 
