--- a/app/src/main/res/layout/fragment_password.xml
+++ b/app/src/main/res/layout/fragment_password.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/backgroundGray"
+    android:background="@color/backgroundAppGray"
     tools:context=".PasswordFragment">
 
         <!-- TODO: Update blank fragment layout -->
@@ -17,23 +17,27 @@
         <TextView
             android:id="@+id/changePass"
             style="@style/login_text_view"
-            android:textSize="24sp"
+            android:textSize="28sp"
+            android:layout_marginBottom="40dp"
+            android:textColor="@color/colorPrimaryDark"
             android:text="@string/changePassword" />
 
         <EditText
             android:id="@+id/changePassword"
             style="@style/editText_style"
-            android:inputType="textPassword" />
+            android:inputType="textPassword"
+            android:hint="New Password"/>
 
         <EditText
             android:id="@+id/verifyChangePassword"
             style="@style/editText_style"
+            android:hint="Confirm Password"
             android:inputType="textPassword" />
 
         <Button
             android:id="@+id/change"
             android:text="@string/change"
-            style="@style/login_buttons"/>
+            style="@style/login_buttons" />
 
     </LinearLayout>
 
