--- a/app/src/main/res/layout/separator_account.xml
+++ b/app/src/main/res/layout/separator_account.xml
@@ -1,11 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="20dp"
+    android:layout_marginTop="8dp"
+    android:layout_marginBottom="8dp"
+    android:alpha="0.6">
 
+    <TextView
+        android:id="@+id/orSeparator"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:textSize="14sp"
+        android:text="@string/accountActions"
+        android:alpha="1"
+        android:textColor="@color/backgroundGray"/>
 
     <View
-        android:layout_width="1dp"
-        android:layout_height="match_parent"
-        android:layout_margin="10dp"
-        android:background="@color/colorPrimaryDark" />
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="16dp"
+        android:layout_toLeftOf="@id/orSeparator"
+        android:background="@color/colorPrimaryDark"
+        />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_centerVertical="true"
+        android:layout_marginRight="16dp"
+        android:layout_toRightOf="@id/orSeparator"
+        android:background="@color/colorPrimaryDark"
+        />
+
 </RelativeLayout>
